--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v2",
+  "name": "vue_web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,48 +9,21 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "highlight.js": "^9.15.6",
+    "connect-history-api-fallback": "^1.6.0",
+    "css-loader": "^1.0.0",
+    "highlight.js": "^9.13.1",
     "progressive-image": "^1.2.0",
+    "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
-    "register-service-worker": "^1.5.2",
-    "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.17"
+  }
 }
