--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "progressive-image": "^1.2.0",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
