--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.0",
     "axios": "^0.18.0",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^1.0.0",
