--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "progressive-image": "^1.2.0",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-cropper": "^0.4.9",
+    "vue-lazyload": "^1.2.6",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
