--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "css-loader": "^1.0.0",
     "highlight.js": "^9.13.1",
     "progressive-image": "^1.2.0",
+    "qs": "^6.7.0",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-color": "^2.7.0",
     "vue-cropper": "^0.4.9",
     "vue-lazyload": "^1.2.6",
     "vue-parallaxy": "^1.1.1",
@@ -28,6 +30,7 @@
     "@vue/cli-service": "^3.0.5",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.0.1",
+    "sass-resources-loader": "^2.0.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
