--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^1.0.0",
     "highlight.js": "^9.13.1",
+    "prerender-spa-plugin": "^3.4.0",
     "progressive-image": "^1.2.0",
     "qs": "^6.7.0",
     "vue": "^2.5.17",
